--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,3 +20,6 @@ include(${CMAKE_BINARY_DIR}/conan.cmake)
 conan_cmake_run(CONANFILE "../conanfile.txt"
                 BASIC_SETUP CMAKE_TARGETS
                 BUILD missing)
+
+add_subdirectory(libalign)
+add_subdirectory(app)
